Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 <li>Shows the newest 6 entries</li>
 <li>Updates every 5 minutes(You have to leave the app open)</li>
 <li>If there is any new earthquakes, you receive a double-vibration notification</li>
-<li>Shows the distance between you and the earthquake
-### Download
-<a href="https://apps.getpebble.com/applications/5530b9f67b5ea6a2380000e1">Pebble App Store</a>
-</li>
+<li>Shows the distance between you and the earthquake</li>
 </ol>
+
+<h3>
+<a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h3>
+
+<p><a href="https://apps.getpebble.com/applications/5530b9f67b5ea6a2380000e1">Pebble App Store</a></p>
 
 <p>Mobile Users: Open in Pebble App </p>
 
